<resources>
    <string name="app_name">Repartidor</string>

    <string name="btn_addReparto">Agregar Reparto</string>
<!-- LOGIN-->
    <string name="signed_in">Signed in!</string>
    <string name="signed_out">Signed out!</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="logout_button">Logout</string>
    <string name="firebase_user_fmt">Repartidor Email: %s</string>


    <string name="sign_in">Sign In</string>
    <string name="register">REGISTER</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="logKo">Usuario y/o contraseña erroneo.</string>


    <!-- REPARTOS-->

    <string name="Articulos">nº articulos</string>
    <string name="Estado">Detalle estado del pedido</string>
    <string name="Registrado">Registro fecha</string>
    <string name="Encamino">En reparto</string>
    <string name="Entregado">Pendiente de entrega</string>
    <string name="Direccion">Dirección</string>
    <string name="Cliente">Nombre Cliente</string>
    <string name="AddPedido">Añadir al Reparto</string>
    <string name="ModifyPedido">Modificar Pedido</string>
    <string name="DeletePedido">Borrar Pedido</string>
    <string name="buscarWifi">Buscar Wifi</string>
    <string name="Salir">Salir</string>
    <string name="ListPedidos">Lista de Pedidos</string>


</resources>
