<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/icon_add"
    android:icon="@drawable/ic_add"
    android:title="@string/AddPedido"
    app:showAsAction="always"/>

    <item android:id="@+id/icon_modify"
        android:icon="@drawable/ic_modify"
        android:title="@string/ModifyPedido"
        app:showAsAction="always"/>

    <item android:id="@+id/icon_del"
        android:icon="@drawable/ic_del"
        android:title="@string/DeletePedido" />
    <item android:id="@+id/icon_entrega"
        android:icon="@drawable/ic_entrega"
        android:title="@string/buscarWifi"
        app:showAsAction="always"/>
    <item android:id="@+id/icon_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/Salir" />
</menu>