<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="29dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldPassword"
        android:layout_alignEnd="@+id/fieldEmail"
        android:text="@string/register" />



    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="297dp"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorFontBlack"
        android:textColorHint="@color/textColorHint"
        android:shadowColor="@color/colorFont"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"/>

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldEmail"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorFontBlack"
        android:textColorHint="@color/textColorHint"
        android:shadowColor="@color/colorFont"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"/>


</RelativeLayout>